--- a/pixar_films_dataset.ipynb
+++ b/pixar_films_dataset.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyO3F12XXtsyyV2jhCzfQVXa",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Manuelaamorim/pixar_dataset/blob/main/pixar_films_dataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "u2Bsc7o7iywc"
       },
@@ -38,9 +50,9 @@
           "height": 73
         },
         "id": "ek1QXeo3jBTR",
-        "outputId": "4f44d9bb-7a80-4145-f53e-2d680419d3c8"
+        "outputId": "cf19e5e1-c0d0-4243-af47-74bd062e1206"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -50,9 +62,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-3266dd64-dd36-454e-9056-be7d9168847f\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-2e46441a-0092-4a81-8448-a6d8a91be534\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-3266dd64-dd36-454e-9056-be7d9168847f\">\n",
+              "     <output id=\"result-2e46441a-0092-4a81-8448-a6d8a91be534\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -249,13 +261,137 @@
       "cell_type": "code",
       "source": [
         "data = pd.read_csv(\"films.csv\")\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "g1fv4lzXjWXl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g1fv4lzXjWXl",
+        "outputId": "503d83ef-0818-4749-d6c7-79a265cf8191"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probabilidade de um filme ter IMDB > 7: 0.79\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# probabilidade simples de um filme ter nota superior a 7 no IMDB\n",
+        "total_filmes = len(data)\n",
+        "maior = sum(1 for score in data['imdb_score'] if score > 7)\n",
+        "probabilidade_imdb = maior/total_filmes\n",
+        "print(f\"Probabilidade de um filme ter IMDB > 7: {probabilidade_imdb}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NSdpj1vLs6jq",
+        "outputId": "1dff1b2a-0508-4852-bd15-6374d0884deb"
       },
       "execution_count": 9,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probabilidade de um filme ter IMDB > 7: 0.7857142857142857\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# probabilidade simples de um filme ser classificado como PG\n",
+        "total_filmes = len(data)\n",
+        "filmes_pg = sum(1 for rating in data['film_rating'] if rating == \"PG\")\n",
+        "prob_pg = filmes_pg / total_filmes\n",
+        "print(f\"Probabilidade de um filme ser PG: {prob_pg}\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3cDApyMhtXga",
+        "outputId": "806543ab-59a2-4937-f1ff-08ff4309a8b7"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probabilidade de um filme ser PG: 0.5357142857142857\n",
+            "['G' 'PG']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de quantos filmes têm Rotten Tomatoes Score maior que 70\n",
+        "filmes_rotten_maior_70 = sum(1 for score in data['rotten_tomatoes_score'] if score > 70)\n",
+        "prob_rotten = filmes_rotten_maior_70 / total_filmes\n",
+        "\n",
+        "print(f\"Probabilidade de um filme ter Rotten Tomatoes Score > 70: {prob_rotten}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OGTU90tgvg92",
+        "outputId": "5deee17b-397c-460a-d356-fb0285e105d8"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probabilidade de um filme ter Rotten Tomatoes Score > 70: 0.9285714285714286\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade simples dos filmes terem orçamento acima de 50M\n",
+        "filmes_orcamento_maior_50M = sum(1 for budget in data['budget'] if budget > 50000000)\n",
+        "prob_orcamento = filmes_orcamento_maior_50M / total_filmes\n",
+        "\n",
+        "print(f\"Probabilidade de um filme ter orçamento > 50M: {prob_orcamento}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nKpkWSaGuuig",
+        "outputId": "86e587fe-43a0-49f7-dd63-f92895fe1efd"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probabilidade de um filme ter orçamento > 50M: 0.93\n"
+          ]
+        }
+      ]
     }
   ]
 }
