probabilidade com união

--- a/pixar_films_dataset.ipynb
+++ b/pixar_films_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3F12XXtsyyV2jhCzfQVXa",
+      "authorship_tag": "ABX9TyPu/n2DsqPVoRspa7hw9RJv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -284,6 +284,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Probabilidade simples\n"
+      ],
+      "metadata": {
+        "id": "a8byp6UU1Nuo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# probabilidade simples de um filme ter nota superior a 7 no IMDB\n",
@@ -389,6 +398,136 @@
           "name": "stdout",
           "text": [
             "Probabilidade de um filme ter orçamento > 50M: 0.93\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Probabilidade com união"
+      ],
+      "metadata": {
+        "id": "eD_1p8eF0_bH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme ter bilheteria nos EUA/Canadá > 50 milhões OU bilheteria no resto do mundo > 100 milhões"
+      ],
+      "metadata": {
+        "id": "_DOcymh3wXbf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Contar filmes com bilheteria nos EUA/Canadá > 50M\n",
+        "filmes_us_maior_50M = sum(1 for box in data['box_office_us_canada'] if box > 50000000)\n",
+        "\n",
+        "# Contar filmes com bilheteria internacional > 100M\n",
+        "filmes_outro_maior_100M = sum(1 for box in data['box_office_other'] if box > 100000000)\n",
+        "\n",
+        "# Contar filmes que atendem ambas as condições\n",
+        "filmes_ambos = sum(1 for us, outro in zip(data['box_office_us_canada'], data['box_office_other']) if us > 50000000 and outro > 100000000)\n",
+        "\n",
+        "# Calcular P(A ∪ B)\n",
+        "prob_uniao = (filmes_us_maior_50M + filmes_outro_maior_100M - filmes_ambos) / total_filmes\n",
+        "\n",
+        "print(f\"Probabilidade de um filme ter bilheteria EUA/Canadá > 50M OU internacional > 100M: {prob_uniao}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6tY_iEwvyv2y",
+        "outputId": "64ac8eb4-6cec-4d81-c0dc-eabb4886f225"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probabilidade de um filme ter bilheteria EUA/Canadá > 50M OU internacional > 100M: 0.9285714285714286\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme ter mais de 1000 avaliações no IMDb OU nota IMDb maior que 8\n",
+        "# Contar filmes com mais de 1000 avaliações no IMDb\n",
+        "filmes_imdb_contagem_maior_1000 = sum(1 for count in data['imdb_counts'] if count > 1000)\n",
+        "\n",
+        "# Contar filmes com IMDb Score > 8\n",
+        "filmes_imdb_maior_8 = sum(1 for score in data['imdb_score'] if score > 8)\n",
+        "\n",
+        "# Contar filmes que atendem ambas as condições\n",
+        "filmes_ambos = sum(1 for count, score in zip(data['imdb_counts'], data['imdb_score']) if count > 1000 and score > 8)\n",
+        "\n",
+        "# Calcular P(A ∪ B)\n",
+        "prob_uniao = (filmes_imdb_contagem_maior_1000 + filmes_imdb_maior_8 - filmes_ambos) / total_filmes\n",
+        "\n",
+        "print(f\"Probabilidade de um filme ter mais de 1000 avaliações no IMDb OU nota > 8: {prob_uniao}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xFSeL0Y2zpcX",
+        "outputId": "fd2056ff-d6d3-414d-bb60-c2b7c22b2920"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probabilidade de um filme ter mais de 1000 avaliações no IMDb OU nota > 8: 1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme ter orçamento > 50M OU bilheteria mundial > 100M:\n",
+        "total_filmes = len(data)\n",
+        "\n",
+        "\n",
+        "A = np.array(data['budget']) > 50000000  # Filmes com orçamento > 50M\n",
+        "B = np.array(data['box_office_worldwide']) > 100000000  # Filmes com bilheteria > 100M\n",
+        "\n",
+        "# Calcular as probabilidades usando NumPy\n",
+        "P_A = np.sum(A) / total_filmes  # Probabilidade de A (budget > 50M)\n",
+        "P_B = np.sum(B) / total_filmes  # Probabilidade de B (bilheteria mundial > 100M)\n",
+        "P_A_inter_B = np.sum(A & B) / total_filmes  # Probabilidade da interseção (A ∩ B)\n",
+        "\n",
+        "# Aplicar a fórmula de união\n",
+        "P_A_uniao_B = P_A + P_B - P_A_inter_B\n",
+        "\n",
+        "# Exibir o resultado formatado\n",
+        "print(f\"Probabilidade de um filme ter orçamento > 50M OU bilheteria mundial > 100M: {P_A_uniao_B}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GOqJzoHk0n6a",
+        "outputId": "9fd2411c-49a6-4ad3-b98d-01a0ad1ff0f2"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probabilidade de um filme ter orçamento > 50M OU bilheteria mundial > 100M: 0.9642857142857143\n"
           ]
         }
       ]
