--- a/pixar_films_dataset.ipynb
+++ b/pixar_films_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPu/n2DsqPVoRspa7hw9RJv",
+      "authorship_tag": "ABX9TyOUotGLHEtrOhyB3nCGq86C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -261,6 +261,14 @@
       "cell_type": "code",
       "source": [
         "data = pd.read_csv(\"films.csv\")\n",
+        "print('Dataset Head:')\n",
+        "print(data.head())\n",
+        "\n",
+        "print('\\nDataset Info:')\n",
+        "print(data.info())\n",
+        "\n",
+        "print('\\nSumário de Estatísticas:')\n",
+        "print(data.describe(include='all'))\n",
         "\n",
         "\n",
         "\n"
@@ -270,15 +278,121 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g1fv4lzXjWXl",
-        "outputId": "503d83ef-0818-4749-d6c7-79a265cf8191"
+        "outputId": "c7335232-025a-4899-c5aa-334d9e76efc9"
       },
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Probabilidade de um filme ter IMDB > 7: 0.79\n"
+            "Dataset Head:\n",
+            "   ID            film film_rating cinema_score release_date  run_time  \\\n",
+            "0   1       Toy Story           G            A   1995-11-22        81   \n",
+            "1   2    A Bug's Life           G            A   1998-11-25        95   \n",
+            "2   3     Toy Story 2           G           A+   1999-11-24        92   \n",
+            "3   4  Monsters, Inc.           G           A+   2001-11-02        92   \n",
+            "4   5    Finding Nemo           G           A+   2003-05-30       100   \n",
+            "\n",
+            "      budget  box_office_us_canada  box_office_other  box_office_worldwide  \\\n",
+            "0   30000000             223225679         171210907             394436586   \n",
+            "1  120000000             162798565         200460294             363258859   \n",
+            "2   90000000             245852179         265506097             511358276   \n",
+            "3  115000000             255873250         272900000             528773250   \n",
+            "4   94000000             339714978         531300000             871014978   \n",
+            "\n",
+            "   rotten_tomatoes_score  rotten_tomatoes_counts  metacritic_score  \\\n",
+            "0                    100                      96                95   \n",
+            "1                     92                      91                78   \n",
+            "2                    100                     172                88   \n",
+            "3                     96                     199                79   \n",
+            "4                     99                     270                90   \n",
+            "\n",
+            "   metacritic_counts  imdb_score  imdb_counts  \n",
+            "0                 26         8.3      1089101  \n",
+            "1                 23         7.2       319596  \n",
+            "2                 34         7.9       630573  \n",
+            "3                 35         8.1      1000657  \n",
+            "4                 38         8.2      1132877  \n",
+            "\n",
+            "Dataset Info:\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 28 entries, 0 to 27\n",
+            "Data columns (total 16 columns):\n",
+            " #   Column                  Non-Null Count  Dtype  \n",
+            "---  ------                  --------------  -----  \n",
+            " 0   ID                      28 non-null     int64  \n",
+            " 1   film                    28 non-null     object \n",
+            " 2   film_rating             28 non-null     object \n",
+            " 3   cinema_score            25 non-null     object \n",
+            " 4   release_date            28 non-null     object \n",
+            " 5   run_time                28 non-null     int64  \n",
+            " 6   budget                  28 non-null     int64  \n",
+            " 7   box_office_us_canada    28 non-null     int64  \n",
+            " 8   box_office_other        28 non-null     int64  \n",
+            " 9   box_office_worldwide    28 non-null     int64  \n",
+            " 10  rotten_tomatoes_score   28 non-null     int64  \n",
+            " 11  rotten_tomatoes_counts  28 non-null     int64  \n",
+            " 12  metacritic_score        28 non-null     int64  \n",
+            " 13  metacritic_counts       28 non-null     int64  \n",
+            " 14  imdb_score              28 non-null     float64\n",
+            " 15  imdb_counts             28 non-null     int64  \n",
+            "dtypes: float64(1), int64(11), object(4)\n",
+            "memory usage: 3.6+ KB\n",
+            "None\n",
+            "\n",
+            "Sumário de Estatísticas:\n",
+            "               ID       film film_rating cinema_score release_date  \\\n",
+            "count   28.000000         28          28           25           28   \n",
+            "unique        NaN         28           2            3           28   \n",
+            "top           NaN  Toy Story          PG            A   1995-11-22   \n",
+            "freq          NaN          1          15           15            1   \n",
+            "mean    14.500000        NaN         NaN          NaN          NaN   \n",
+            "std      8.225975        NaN         NaN          NaN          NaN   \n",
+            "min      1.000000        NaN         NaN          NaN          NaN   \n",
+            "25%      7.750000        NaN         NaN          NaN          NaN   \n",
+            "50%     14.500000        NaN         NaN          NaN          NaN   \n",
+            "75%     21.250000        NaN         NaN          NaN          NaN   \n",
+            "max     28.000000        NaN         NaN          NaN          NaN   \n",
+            "\n",
+            "          run_time        budget  box_office_us_canada  box_office_other  \\\n",
+            "count    28.000000  2.800000e+01          2.800000e+01      2.800000e+01   \n",
+            "unique         NaN           NaN                   NaN               NaN   \n",
+            "top            NaN           NaN                   NaN               NaN   \n",
+            "freq           NaN           NaN                   NaN               NaN   \n",
+            "mean    100.392857  1.553929e+08          2.475444e+08      3.611199e+08   \n",
+            "std       8.047725  5.382092e+07          1.631609e+08      2.300110e+08   \n",
+            "min      81.000000  0.000000e+00          9.461540e+05      2.041436e+07   \n",
+            "25%      95.000000  1.200000e+08          1.540453e+08      2.069555e+08   \n",
+            "50%     100.000000  1.750000e+08          2.305457e+08      3.218588e+08   \n",
+            "75%     104.250000  2.000000e+08          3.046819e+08      5.086871e+08   \n",
+            "max     118.000000  2.000000e+08          6.529802e+08      1.045051e+09   \n",
+            "\n",
+            "        box_office_worldwide  rotten_tomatoes_score  rotten_tomatoes_counts  \\\n",
+            "count           2.800000e+01              28.000000               28.000000   \n",
+            "unique                   NaN                    NaN                     NaN   \n",
+            "top                      NaN                    NaN                     NaN   \n",
+            "freq                     NaN                    NaN                     NaN   \n",
+            "mean            6.086643e+08              88.357143              273.821429   \n",
+            "std             3.826497e+08              13.447330               84.248773   \n",
+            "min             2.181336e+07              40.000000               91.000000   \n",
+            "25%             3.787627e+08              79.750000              220.000000   \n",
+            "50%             5.338782e+08              94.500000              266.000000   \n",
+            "75%             8.253837e+08              97.000000              324.000000   \n",
+            "max             1.698031e+09             100.000000              459.000000   \n",
+            "\n",
+            "        metacritic_score  metacritic_counts  imdb_score   imdb_counts  \n",
+            "count          28.000000          28.000000   28.000000  2.800000e+01  \n",
+            "unique               NaN                NaN         NaN           NaN  \n",
+            "top                  NaN                NaN         NaN           NaN  \n",
+            "freq                 NaN                NaN         NaN           NaN  \n",
+            "mean           78.142857          43.464286    7.542857  5.256077e+05  \n",
+            "std            12.408821           9.558716    0.658522  3.688713e+05  \n",
+            "min            57.000000          23.000000    6.100000  1.270450e+05  \n",
+            "25%            68.250000          37.000000    7.175000  1.955322e+05  \n",
+            "50%            79.500000          41.000000    7.550000  3.958430e+05  \n",
+            "75%            88.500000          52.000000    8.100000  8.385082e+05  \n",
+            "max            96.000000          59.000000    8.400000  1.226415e+06  \n"
           ]
         }
       ]
@@ -528,6 +642,145 @@
           "name": "stdout",
           "text": [
             "Probabilidade de um filme ter orçamento > 50M OU bilheteria mundial > 100M: 0.9642857142857143\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Probabilidade com intersecção"
+      ],
+      "metadata": {
+        "id": "d7L0JVUv4KNx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme ser classificado como \"PG-13\" E ter uma bilheteira mundial superior a 100 milhões"
+      ],
+      "metadata": {
+        "id": "NCxbfeaq4JyH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Filmes com classificação \"PG-13\" e bilheteira mundial > 100M\n",
+        "PG_maior_100M = len(data[((data['film_rating'] == 'PG') & (data['box_office_worldwide'] > 100000000))])\n",
+        "\n",
+        "# Probabilidade\n",
+        "prob_PG_maior_100M = PG_maior_100M / len(data)\n",
+        "print(f'A probabilidade de um filme ser PG e ter bilheteira mundial > 100M é de : {round(prob_PG_maior_100M * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MzKkGPE35JL2",
+        "outputId": "d6bdd50b-9bae-4b2b-9e36-c3fb3ee3ab54"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ser PG e ter bilheteira mundial > 100M é de : 46.4286%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme com orçamento superior a 50 milhões E com um IMDB score maior que 8\n",
+        "# Filmes com orçamento > 50M e IMDb > 8\n",
+        "orçamento_maior = len(data[((data['budget'] > 50000000) & (data['imdb_score'] > 8))])\n",
+        "\n",
+        "# Probabilidade\n",
+        "prob_orc = orçamento_maior / len(data)\n",
+        "print(f'A probabilidade de um filme ter orçamento > 50M e IMDb > 8 é de : {round(prob_orc * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U6tT8I5K5iZ5",
+        "outputId": "12fee01b-38ba-4de4-8bad-e58193c0813d"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ter orçamento > 50M e IMDb > 8 é de : 28.5714%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme ter um \"cinema_score\" bom (>= 70) E ter uma duração superior a 90 minutos"
+      ],
+      "metadata": {
+        "id": "04o1RNhm7WIJ"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mapeamento de cinema_score para valores numéricos\n",
+        "cinema_score_map = {\n",
+        "    'A+': 100,\n",
+        "    'A': 90,\n",
+        "    'A-': 85,\n",
+        "    'B+': 80,\n",
+        "    'B': 70,\n",
+        "    'B-': 65,\n",
+        "    'C+': 60,\n",
+        "    'C': 50,\n",
+        "    'C-': 45,\n",
+        "    'D': 30,\n",
+        "    'F': 0\n",
+        "}\n",
+        "\n",
+        "# Substitui as classificações de cinema_score pelas notas numéricas\n",
+        "data['cinema_score'] = data['cinema_score'].map(cinema_score_map)\n",
+        "\n",
+        "# Filmes com cinema_score >= 70 e runtime > 90 minutos\n",
+        "calculo = len(data[(data['cinema_score'] >= 70) & (data['run_time'] > 90)])\n",
+        "\n",
+        "# Total de filmes no dataset\n",
+        "total_filmes = len(data)\n",
+        "\n",
+        "# Probabilidade de interseção (cinema_score >= 70 E runtime > 90)\n",
+        "prob_interseccao_cinema_runtime = calculo / total_filmes\n",
+        "\n",
+        "print(f'A probabilidade de um filme ter cinema_score >= 70 e runtime > 90 minutos é de : {round(prob_interseccao_cinema_runtime * 100, 4)}%')\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qCpYP1xA7X7L",
+        "outputId": "e53e27ec-6cc6-4dda-d270-8f827f4562bd"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ter cinema_score >= 70 e runtime > 90 minutos é de : 0.0%\n"
           ]
         }
       ]
