probabilidade diferença/complemento

--- a/pixar_films_dataset.ipynb
+++ b/pixar_films_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUotGLHEtrOhyB3nCGq86C",
+      "authorship_tag": "ABX9TyPRv8LDRW5ZdLmgZGnRGcRT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -278,9 +278,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g1fv4lzXjWXl",
-        "outputId": "c7335232-025a-4899-c5aa-334d9e76efc9"
+        "outputId": "318bb647-265c-4217-de8b-1f9f01f08208"
       },
-      "execution_count": 21,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,16 +575,10 @@
       "cell_type": "code",
       "source": [
         "# Probabilidade de um filme ter mais de 1000 avaliações no IMDb OU nota IMDb maior que 8\n",
-        "# Contar filmes com mais de 1000 avaliações no IMDb\n",
+        "\n",
         "filmes_imdb_contagem_maior_1000 = sum(1 for count in data['imdb_counts'] if count > 1000)\n",
-        "\n",
-        "# Contar filmes com IMDb Score > 8\n",
         "filmes_imdb_maior_8 = sum(1 for score in data['imdb_score'] if score > 8)\n",
-        "\n",
-        "# Contar filmes que atendem ambas as condições\n",
         "filmes_ambos = sum(1 for count, score in zip(data['imdb_counts'], data['imdb_score']) if count > 1000 and score > 8)\n",
-        "\n",
-        "# Calcular P(A ∪ B)\n",
         "prob_uniao = (filmes_imdb_contagem_maior_1000 + filmes_imdb_maior_8 - filmes_ambos) / total_filmes\n",
         "\n",
         "print(f\"Probabilidade de um filme ter mais de 1000 avaliações no IMDb OU nota > 8: {prob_uniao}\")\n"
@@ -669,10 +663,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Filmes com classificação \"PG-13\" e bilheteira mundial > 100M\n",
         "PG_maior_100M = len(data[((data['film_rating'] == 'PG') & (data['box_office_worldwide'] > 100000000))])\n",
-        "\n",
-        "# Probabilidade\n",
         "prob_PG_maior_100M = PG_maior_100M / len(data)\n",
         "print(f'A probabilidade de um filme ser PG e ter bilheteira mundial > 100M é de : {round(prob_PG_maior_100M * 100, 4)}%')\n"
       ],
@@ -698,10 +689,7 @@
       "cell_type": "code",
       "source": [
         "# Probabilidade de um filme com orçamento superior a 50 milhões E com um IMDB score maior que 8\n",
-        "# Filmes com orçamento > 50M e IMDb > 8\n",
         "orçamento_maior = len(data[((data['budget'] > 50000000) & (data['imdb_score'] > 8))])\n",
-        "\n",
-        "# Probabilidade\n",
         "prob_orc = orçamento_maior / len(data)\n",
         "print(f'A probabilidade de um filme ter orçamento > 50M e IMDb > 8 é de : {round(prob_orc * 100, 4)}%')\n"
       ],
@@ -781,6 +769,103 @@
           "name": "stdout",
           "text": [
             "A probabilidade de um filme ter cinema_score >= 70 e runtime > 90 minutos é de : 0.0%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Probabilidade com complemento/diferença"
+      ],
+      "metadata": {
+        "id": "-lLKOmWe_jOM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# probabilidade do filme não ser PG\n",
+        "\n",
+        "pg_filmes = len(data[data['film_rating'] == 'PG'])\n",
+        "total_filmes = len(data)\n",
+        "prob_pg = pg_filmes / total_filmes\n",
+        "prob_nao_pg = 1 - prob_pg\n",
+        "\n",
+        "print(f'A probabilidade de um filme não ser classificado como PG é de: {round(prob_nao_pg * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7e3OgOEx_mvM",
+        "outputId": "6832acd6-ed9d-429e-f7ce-c6ae840ef29f"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme não ser classificado como PG é de: 46.4286%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme não ter orçamento superior a 100 milhões\n",
+        "\n",
+        "filmes_maior= len(data[data['budget'] > 100_000_000])\n",
+        "prob_orc_maior = filmes_maior / total_filmes\n",
+        "prob_orc_menor = 1 - prob_orc_maior\n",
+        "\n",
+        "print(f'A probabilidade de um filme ter orçamento inferior ou igual a 100 milhões é de: {round(prob_orc_menor * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NcmylBV6_u3b",
+        "outputId": "6c15a11f-d60c-4638-f329-03e30f663924"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ter orçamento inferior ou igual a 100 milhões é de: 17.8571%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme não ter uma receita de bilheteiras no Canadá superior a 10 milhões de dólares\n",
+        "\n",
+        "filmes_boxoffice_maior = len(data[data['box_office_us_canada'] > 10_000_000])\n",
+        "prob_maior= filmes_boxoffice_maior / total_filmes\n",
+        "prob_menor = 1 - prob_maior\n",
+        "\n",
+        "print(f'A probabilidade de um filme ter box_office_us_canada inferior ou igual a 10 milhões de dólares é de: {round(prob_menor * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wu_FXSXkDuiB",
+        "outputId": "6478255f-19f9-4982-91d0-468dd453aa93"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ter box_office_us_canada inferior ou igual a 10 milhões de dólares é de: 10.7143%\n"
           ]
         }
       ]
