--- a/pixar_films_dataset.ipynb
+++ b/pixar_films_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRv8LDRW5ZdLmgZGnRGcRT",
+      "authorship_tag": "ABX9TyPnRShCjaWv1Lmf33tjiWkw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -517,6 +517,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Número de filmes com Metacritic score inferior a 7\n",
+        "filmes_metacritics = len(data[data['metacritic_score'] < 7])\n",
+        "\n",
+        "# Probabilidade de ter Metacritic < 7\n",
+        "prob_metacritic = filmes_metacritics / total_filmes\n",
+        "\n",
+        "print(f'A probabilidade de um filme ter Metacritic menor que 7 é de: {round(prob_metacritic * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g_Pxe-2BG_j9",
+        "outputId": "d05f1e5f-4020-42e8-ac43-36f4507b4035"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ter Metacritic menor que 7 é de: 0.0%\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Probabilidade com união"
@@ -866,6 +895,136 @@
           "name": "stdout",
           "text": [
             "A probabilidade de um filme ter box_office_us_canada inferior ou igual a 10 milhões de dólares é de: 10.7143%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Filmes com Rotten Tomatoes > 7 e Metacritic score < 7\n",
+        "filmes = len(data[(data['rotten_tomatoes_score'] > 7) & (data['metacritic_score'] < 7)])\n",
+        "\n",
+        "# Probabilidade de ter Rotten Tomatoes > 7 e Metacritic < 7\n",
+        "probDiferenca = prob_rotten - prob_metacritic\n",
+        "\n",
+        "print(f'A probabilidade de um filme ter Rotten Tomatoes maior que 7 e não ter no Metacritic é de: {round(probDiferenca * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D7NYbv5NGH9n",
+        "outputId": "621db6bf-df93-456c-e3f5-bcd3f9180c48"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ter Rotten Tomatoes maior que 7 e Metacritic inferior a 7 é de: 92.8571%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Probabilidade Condicional"
+      ],
+      "metadata": {
+        "id": "M_M4LCrPIQYL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade condicional de um filme ser classificado como PG dado que a pontuação no Rotten Tomatoes é maior que 70\n",
+        "# Número de filmes com Rotten Tomatoes > 70 e classificados como PG\n",
+        "filmes_pg_rotten_maior = len(data[(data['film_rating'] == 'PG') & (data['rotten_tomatoes_score'] > 70)])\n",
+        "prob_pg_rotten_70 = filmes_pg_rotten_maior / filmes_rotten_maior_70\n",
+        "\n",
+        "print(f'A probabilidade de um filme ser classificado como PG dado que a pontuação no Rotten Tomatoes é maior que 7 é de: {round(prob_pg_rotten_70 * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "89veVV6rIUGq",
+        "outputId": "0c8e6e7a-5012-4d6a-9daa-1209d3dbfbfb"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ser classificado como PG dado que a pontuação no Rotten Tomatoes é maior que 7 é de: 57.6923%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Filmes com bilheteira global superior a 100 milhões e lançados após 2015\n",
+        "filmes_bilheteria_2015 = len(data[(data['box_office_worldwide'] > 100_000_000) & (data['release_date'] > '2015-01-01')])\n",
+        "\n",
+        "# Filmes lançados após 2015\n",
+        "filmes_apos_2015 = len(data[data['release_date'] > '2015-01-01'])\n",
+        "\n",
+        "# Probabilidade condicional de bilheteira global > 100 milhões dado lançamento após 2015\n",
+        "prob_bilheteira = filmes_bilheteria_2015 / filmes_apos_2015\n",
+        "\n",
+        "print(f'A probabilidade de um filme ter bilheteira global > 100 milhões dado que foi lançado após 2015 é de: {round(prob_bilheteira * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E67pw67_KkN4",
+        "outputId": "6e59d2f5-9ddc-4c2f-d78a-112dffdf95c2"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ter bilheteira global > 100 milhões dado que foi lançado após 2015 é de: 85.7143%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Filmes com CinemaScore = 'A' e orçamento superior a 190 milhões\n",
+        "filmes_A_orcamento = len(data[(data['cinema_score'] == 'A') & (data['budget'] > 190_000_000)])\n",
+        "\n",
+        "# Filmes com orçamento superior a 190 milhões\n",
+        "filmes_orcamento_sup = len(data[data['budget'] > 190_000_000])\n",
+        "\n",
+        "# Probabilidade condicional de CinemaScore = 'A' dado orçamento > 200 milhões\n",
+        "prob_A_orcamento = filmes_A_orcamento/ filmes_orcamento_sup\n",
+        "\n",
+        "print(f'A probabilidade de um filme ter CinemaScore = A dado que o orçamento é maior que 190 milhões é de: {round(prob_A_orcamento * 100, 4)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dt-c9ohkLhMx",
+        "outputId": "c7185817-e04c-4a38-ef55-7ada35425c46"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ter CinemaScore = A dado que o orçamento é maior que 190 milhões é de: 66.6667%\n"
           ]
         }
       ]
