teorema de bayes

--- a/pixar_films_dataset.ipynb
+++ b/pixar_films_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnRShCjaWv1Lmf33tjiWkw",
+      "authorship_tag": "ABX9TyNnNPJPCmLEkuSADlBiJYY1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
           "height": 73
         },
         "id": "ek1QXeo3jBTR",
-        "outputId": "cf19e5e1-c0d0-4243-af47-74bd062e1206"
+        "outputId": "83fe1a9a-1abb-4cbd-eae5-11994276eab0"
       },
       "execution_count": 3,
       "outputs": [
@@ -62,9 +62,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-2e46441a-0092-4a81-8448-a6d8a91be534\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-7fe3aed5-441d-4774-9b22-08730d61a32e\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-2e46441a-0092-4a81-8448-a6d8a91be534\">\n",
+              "     <output id=\"result-7fe3aed5-441d-4774-9b22-08730d61a32e\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -278,9 +278,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g1fv4lzXjWXl",
-        "outputId": "318bb647-265c-4217-de8b-1f9f01f08208"
+        "outputId": "653fa60c-4060-4da7-f49e-d06001db2fc5"
       },
-      "execution_count": 33,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,7 +422,7 @@
         "id": "NSdpj1vLs6jq",
         "outputId": "1dff1b2a-0508-4852-bd15-6374d0884deb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +450,7 @@
         "id": "3cDApyMhtXga",
         "outputId": "806543ab-59a2-4937-f1ff-08ff4309a8b7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,7 @@
         "id": "OGTU90tgvg92",
         "outputId": "5deee17b-397c-460a-d356-fb0285e105d8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +505,7 @@
         "id": "nKpkWSaGuuig",
         "outputId": "86e587fe-43a0-49f7-dd63-f92895fe1efd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,7 +534,7 @@
         "id": "g_Pxe-2BG_j9",
         "outputId": "d05f1e5f-4020-42e8-ac43-36f4507b4035"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,7 +589,7 @@
         "id": "6tY_iEwvyv2y",
         "outputId": "64ac8eb4-6cec-4d81-c0dc-eabb4886f225"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +619,7 @@
         "id": "xFSeL0Y2zpcX",
         "outputId": "fd2056ff-d6d3-414d-bb60-c2b7c22b2920"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,7 +658,7 @@
         "id": "GOqJzoHk0n6a",
         "outputId": "9fd2411c-49a6-4ad3-b98d-01a0ad1ff0f2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +703,7 @@
         "id": "MzKkGPE35JL2",
         "outputId": "d6bdd50b-9bae-4b2b-9e36-c3fb3ee3ab54"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +729,7 @@
         "id": "U6tT8I5K5iZ5",
         "outputId": "12fee01b-38ba-4de4-8bad-e58193c0813d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +748,7 @@
       "metadata": {
         "id": "04o1RNhm7WIJ"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -791,7 +791,7 @@
         "id": "qCpYP1xA7X7L",
         "outputId": "e53e27ec-6cc6-4dda-d270-8f827f4562bd"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,7 +830,7 @@
         "id": "7e3OgOEx_mvM",
         "outputId": "6832acd6-ed9d-429e-f7ce-c6ae840ef29f"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,7 +859,7 @@
         "id": "NcmylBV6_u3b",
         "outputId": "6c15a11f-d60c-4638-f329-03e30f663924"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +888,7 @@
         "id": "wu_FXSXkDuiB",
         "outputId": "6478255f-19f9-4982-91d0-468dd453aa93"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -917,7 +917,7 @@
         "id": "D7NYbv5NGH9n",
         "outputId": "621db6bf-df93-456c-e3f5-bcd3f9180c48"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -954,7 +954,7 @@
         "id": "89veVV6rIUGq",
         "outputId": "0c8e6e7a-5012-4d6a-9daa-1209d3dbfbfb"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -986,7 +986,7 @@
         "id": "E67pw67_KkN4",
         "outputId": "6e59d2f5-9ddc-4c2f-d78a-112dffdf95c2"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1018,13 +1018,158 @@
         "id": "Dt-c9ohkLhMx",
         "outputId": "c7185817-e04c-4a38-ef55-7ada35425c46"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "A probabilidade de um filme ter CinemaScore = A dado que o orçamento é maior que 190 milhões é de: 66.6667%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Probabilidade com Teorema de Bayes"
+      ],
+      "metadata": {
+        "id": "-YY0AgbyE8Hj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Probabilidade de um filme ser bem avaliado no Metacritic, dado que ele tem um CinemaScore 'A'.\n",
+        "total_filmes = len(data)\n",
+        "\n",
+        "# Filmes com Metacritic > 70\n",
+        "filmes_metacritic_alto = len(data[data['metacritic_score'] > 70])\n",
+        "P_A = filmes_metacritic_alto / total_filmes  # P(A)\n",
+        "\n",
+        "# Filmes com CinemaScore = 'A'\n",
+        "filmes_cinema_A = len(data[data['cinema_score'] == 'A'])\n",
+        "P_B = filmes_cinema_A / total_filmes  # P(B)\n",
+        "\n",
+        "# Filmes com Metacritic > 70 e CinemaScore = 'A'\n",
+        "filmes_metacritic_alto_cinema_A = len(data[(data['metacritic_score'] > 70) & (data['cinema_score'] == 'A')])\n",
+        "P_B_A = filmes_metacritic_alto_cinema_A / filmes_metacritic_alto  # P(B|A)\n",
+        "\n",
+        "# Aplicação do Teorema de Bayes\n",
+        "P_A_B = (P_B_A * P_A) / P_B\n",
+        "\n",
+        "print(f'A probabilidade de um filme ter Metacritic > 70 dado que tem CinemaScore \"A+\" é de: {round(P_A_B * 100, 2)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JFagifmvE_6Q",
+        "outputId": "471dcc81-5698-4a31-9a7b-fe2029bb8ced"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ter Metacritic > 70 dado que tem CinemaScore \"A+\" é de: 66.67%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme ser classificado como G, dado que tem um Cinema Score igual ou maior que A.\n",
+        "# Total de filmes classificados como G\n",
+        "filmes_g = len(data[data['film_rating'] == 'G'])\n",
+        "P_A = filmes_g / total_filmes  # P(A)\n",
+        "\n",
+        "# Total de filmes com Cinema Score A ou A+\n",
+        "filmes_cinema_a = len(data[data['cinema_score'].isin(['A', 'A+'])])\n",
+        "P_B = filmes_cinema_a / total_filmes  # P(B)\n",
+        "\n",
+        "# Filmes que são G e têm Cinema Score A ou A+\n",
+        "filmes_g_cinema_a = len(data[(data['film_rating'] == 'G') & (data['cinema_score'].isin(['A', 'A+']))])\n",
+        "P_B_A = filmes_g_cinema_a / filmes_g  # P(B|A)\n",
+        "\n",
+        "# Aplicação do Teorema de Bayes\n",
+        "P_A_B = (P_B_A * P_A) / P_B\n",
+        "\n",
+        "print(f'A probabilidade de um filme ser G dado que tem Cinema Score A ou A+ é de: {round(P_A_B * 100, 2)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OlQby1OyMPQj",
+        "outputId": "c444e212-7e7e-45a8-ea8c-b45fcda03993"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ser G dado que tem Cinema Score A ou A+ é de: 54.55%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de um filme ser PG, dado que foi lançado no verão (junho, julho ou agosto)."
+      ],
+      "metadata": {
+        "id": "imd9BkMcWKFl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Converter a coluna release_date para datetime\n",
+        "data['release_date'] = pd.to_datetime(data['release_date'])\n",
+        "\n",
+        "# Definir meses de verão\n",
+        "meses_verao = [6, 7, 8]\n",
+        "\n",
+        "# Total de filmes classificados como PG\n",
+        "filmes_pg = len(data[data['film_rating'] == 'PG'])\n",
+        "P_A = filmes_pg / total_filmes  # P(A)\n",
+        "\n",
+        "# Total de filmes lançados no verão\n",
+        "filmes_verao = len(data[data['release_date'].dt.month.isin(meses_verao)])\n",
+        "P_B = filmes_verao / total_filmes  # P(B)\n",
+        "\n",
+        "# Filmes que são PG e foram lançados no verão\n",
+        "filmes_pg_verao = len(data[(data['film_rating'] == 'PG') & (data['release_date'].dt.month.isin(meses_verao))])\n",
+        "P_B_A = filmes_pg_verao / filmes_pg  # P(B|A)\n",
+        "\n",
+        "# Aplicação do Teorema de Bayes\n",
+        "P_A_B = (P_B_A * P_A) / P_B\n",
+        "\n",
+        "print(f'A probabilidade de um filme ser PG dado que foi lançado no verão é de: {round(P_A_B * 100, 2)}%')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BYJJHdHkWM7V",
+        "outputId": "9a66db50-8bdd-4a4b-e3be-129ebbeb0421"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A probabilidade de um filme ser PG dado que foi lançado no verão é de: 50.0%\n"
           ]
         }
       ]
